--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,39 @@
 /*  your css code here. If applicable */
+body{
+	background-color: rgb(180,150, 170);
+}
+h1 {
+            text-align: center;
+        }
+        
+        h2 {
+            text-align: center;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+
+        li {
+            list-style-type: none;
+        }
+  a {
+            text-decoration-line: none;
+        }
+
+        .player_one,
+        .player_two {
+            background-color: rgb(2, 200, 255);
+            padding: 10px;
+            border-radius: 10px;
+        }
+.play{
+	border: solid green;
+	background-color: lightcoral;
+	padding: 20px;
+}
+.two{
+	border: solid beige;
+	background-color: lightslategray;
+	padding: 40px;
+}
