--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
 body{
-	background-color: rgb(180,150, 170);
+	background-color: rgb(204,204,204);
 }
 h1 {
             text-align: center;
@@ -23,7 +23,7 @@ h1 {
 
         .player_one,
         .player_two {
-            background-color: rgb(2, 200, 255);
+            background-color: rgb(255, 255, 255);
             padding: 10px;
             border-radius: 10px;
         }
